# narrar

./: .gitignore  README.md  pyproject.toml
narrar/: elevenlabs_voices.py  narrar.ipynb  narrar.py
